swagger get by id
